--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.google.com/specimen/Roboto">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css; rel="stylesheet">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"&gt;
     <title>Tropicália</title>
 </head>
 <body>
     <header class="p-5">
-        <nav class="container"></nav>
+        <nav class="container d-flex justify-content-between aling-items-center"></nav>
+            <imgr src="img/logo.png" alt="logotipo da Tropicália" class="nav-img" loading="lazy"
     </header>
 </body>
 </html>
