--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="p-5">
         <nav class="container d-flex justify-content-between aling-items-center"></nav>
-            <imgr src="img/logo.png" alt="logotipo da Tropicália" class="nav-img" loading="lazy"
+            <img src="img/logo.png" alt="logotipo da Tropicália" class="nav-img" loading="lazy">
     </header>
 </body>
 </html>
