--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <header class="p-5">
         <nav class="container d-flex justify-content-between aling-items-center"></nav>
             <img src="img/logo.png" alt="logotipo da Tropicália" class="nav-img" loading="lazy">
+           <ul class="nav mt-5"></ul>
+              <li class="nav-item"><a class="nav-link" href="#inicio">Inicio<a></li>
     </header>
+
 </body>
 </html>
