--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <nav class="container d-flex justify-content-between aling-items-center"></nav>
             <img src="img/logo.png" alt="logotipo da Tropicália" class="nav-img" loading="lazy">
            <ul class="nav mt-5"></ul>
-              <li class="nav-item"><a class="nav-link" href="#inicio">Inicio<a></li>
+            <li class="nav-item"><a class="nav-link" href="#inicio">Inicio<a></li>
+            <li class="nav-item"><a class="nav-link" href="#galeria">Galeria<a></li>
+            <li class="nav-item"><a class="nav-link" href="#contato">Contato<a></li>
     </header>
-
+    
 </body>
 </html>
