--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="p-5">
         <nav class="container d-flex justify-content-between aling-items-center">
             <img src="img/logo.png" alt="logotipo da Tropicália" class="nav-img" loading="lazy">
-           <ul class="nav mt-5"></ul>
+           <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Inicio<a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria<a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato<a></li>
