--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"&gt;
     <title>Tropicália</title>
 </head>
+
+
 <body>
     <header class="p-5">
         <nav class="container d-flex justify-content-between aling-items-center">
@@ -19,6 +21,17 @@
             </ul>
         </nav>
         </header>
+
+     <main class="container my-5">
+    <section id="inicio" class="my-5">
+        <div class="inicio-fundo d-flex justify-content-between aling-items-center">
+            <h1 class="display-4 text-black fst-italic fw-bold">
+                
+            </h1>
+        </div>
+    </section>
+     </main>
+
     
 </body>
 </html>
