--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,13 +25,23 @@
      <main class="container my-5">
     <section id="inicio" class="my-5">
         <div class="inicio-fundo d-flex justify-content-between aling-items-center">
-            <h1 class="display-4 text-black fst-italic fw-bold">
-                
-            </h1>
+            <div class="esquerda-conteudo">
+            <h1 class="display-4 text-black fst-italic fw-bold">Boas_vindas</h1>
+              <img src="img/logo-2.png" alt="Logotipo secúndario da Tropicália" class="mb-3" width="563" height="278" loading="lazy"
+              <a href="#tropicalia" class="bnt btn-primary bnt-lg botao-inicio fw-semibold">Quero conhecer!!</a>
+            </div>
+        </div>
+    </section>
+
+    <section id="tropicalia" class="my-5 pt-6 sessao-tropicalia">
+        <div class="container d-flex aling-items-center">
+            <div class="col-5">
+              <h2>O que foi  Tropicália</h2>
+              <p class="p-2">A tropicalia </p>
+            </div>
         </div>
     </section>
      </main>
-
     
 </body>
 </html>
