--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <div class="container d-flex aling-items-center">
             <div class="col-5">
               <h2>O que foi  Tropicália</h2>
-              <p class="p-2">A tropicalia </p>
+              <p class="p-2">A tropicalia, também conhecida como Tropicalismo, foi um movimento cultural brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968.
+                Esse movimento abrangeu varias expressoes artisticas, como musica, o cinema, o teatro e artes plásticas,e teve como principal caracteristicas a mistura de elementos da cultura brasileira tradicional, como influencia estrangeira, especialmente doo rock e da musica pop </p>
             </div>
         </div>
     </section>
