--- a/index.html
+++ b/index.html
@@ -38,9 +38,24 @@
             <div class="col-5">
               <h2>O que foi  Tropicália</h2>
               <p class="p-2">A tropicalia, também conhecida como Tropicalismo, foi um movimento cultural brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968.
-                Esse movimento abrangeu varias expressoes artisticas, como musica, o cinema, o teatro e artes plásticas,e teve como principal caracteristicas a mistura de elementos da cultura brasileira tradicional, como influencia estrangeira, especialmente doo rock e da musica pop </p>
+                Esse movimento abrangeu varias expressoes artisticas, como musica, o cinema, o teatro e artes plásticas,e teve como principal caracteristicas a mistura de elementos da cultura brasileira tradicional, como influencia estrangeira, especialmente doo rock e da musica pop. </p>
             </div>
         </div>
+    </section>
+    <section id="galeria">
+        <h2 class="text-center pt-5">Galeria</h2>
+        <div class="container p-3 mt-3 fundo-galeria">
+        <div class="row justify-content-md-center">
+            <div class="col-md-4">
+                <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
+                class="img-fluid rounded-5" loading="lazy">
+          </div>
+          <div  class="col-md-4">
+            <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png"
+          </div>
+        </div>
+        </div>
+
     </section>
      </main>
     
