--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 class="img-fluid rounded-5" loading="lazy">
           </div>
           <div  class="col-md-4">
-            <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png"
+            <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png" class="img-fluid rounded-5" loading="lazy"
           </div>
         </div>
         </div>
