--- a/index.html
+++ b/index.html
@@ -59,7 +59,15 @@
 
     <section id="contato">
           <div class="container p-5 d-flex justify-content-center">
-            <div class="col-md-8 col-lg-"
+            <div class="col-md-8 col-lg- col-lg-10 rounded-5 formulario"
+            <h2 class="mb-3">Entre em contato</h2>
+            <form>
+                <div class="form-group mb-3">
+               <label  for="nome">Nome</label>
+               <input type="text" id="nome"class="form control rounded-3 mt1" placeholder="Digite seu nome completo">
+                </div>  
+            <input type="email" id="email" name="email" class="form control rounded-3 mt-1 placeholder="Digite seu email">
+            </form> 
           </div>
     </section>
      </main>
