--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tropicália</title>
       <link rel="preconnect" href="https://fonts.google.com/specimen/Inter">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"&gt;>
-      <title>Tropicália</title>
+      <link rel="stylesheet" href="style.css"
 </head>
 <body>
   <header class="p-5">
