--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="PT-BR">
+<html lang=>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -82,7 +82,7 @@
         <i class="bi bi-whatsaap"></i>
         <i class="bi bi-instagram"></i>
         <i class="bi bi-twiter"></i>
-        <p class="mt-3">Desenvolvido por Thalison</p>
+        <p class="mt-3">Desenvolvido por mia kalifa</p>
     </footer>
     <script src="script.js"></script>
 </body>
